<resources>
    <string name="app_name">Mascotas</string>
    <string name="menu_option_contacto">Contacto</string>
    <string name="menu_option_acerca_de">Acerca de</string>
    <string name="bio_desarrollador_text">Mi nombre es Maxi y soy el desarrollador de esta aplicacion!</string>
    <string name="texto_contacto">Ingrese sus datos para enviar un comentario a la empresa</string>
    <string name="hint_contaco_nombre">Nombre</string>
    <string name="hint_contaco_email">Email</string>
    <string name="hint_contaco_mensaje">Mensaje</string>
    <string name="enviar_comentario_button_text">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recicler_view_fragment_test">Recicler view fragment test</string>
    <string name="mi_mascota_fragment_test">Mi mascota fragment test</string>
    <string name="tab_text">tab1</string>
    <string name="tab_text_2">tab2</string>
    <string name="mi_flamingo_name">Ricardo</string>
</resources>
