<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoActivity">


    <include android:id="@+id/action_bar"
        layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_texto_contacto"
            android:text="@string/texto_contacto"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contaco_nombre"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contaco_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contaco_mensaje"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/enviar_comentario_button_text"
                android:layout_weight="2"
                android:onClick="sendMessage"> </Button>

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>